--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,32 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+   // implementation "com.squareup.picasso:picasso:$picasso_version"
+    //circleimageview
+    implementation "de.hdodenhof:circleimageview:3.0.0"
+
+    //retofit
+   // implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+
+    implementation "com.squareup.picasso:picasso:2.5.2"
+
+    // Interceptor para visualizar os logs das requisições do Retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+
+    //Converter do Retrofit para utilizar o Gson para tratar a resposta do servidor
+    //implementation "com.squareup.retrofit2:converter-gson:$retrofit_gson_version"
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    //Coroutines adapter usado na configuração do retrofit
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation  "com.github.kittinunf.result:result-coroutines:2.2.0"
 }
