--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     //lifecycle
@@ -62,4 +62,24 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation  "com.github.kittinunf.result:result-coroutines:2.2.0"
+
+    //mockito
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    //testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0")
+
+//    // Mockito
+//    testImplementation 'org.mockito:mockito-core:2.28.2'
+//    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+//    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '2.28.2'
+
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
 }
