--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.ui.repository.view.RepositoryActivity">
+        <activity android:name=".app.features.repository.ui.view.RepositoryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
