--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name="com.accenture.cleanarchitecture.app.features.pullrequest.ui.view.PullRequestActivity"></activity>
-        <activity android:name=".app.features.repository.ui.view.RepositoryActivity">
+        <activity android:name=".app.features.main.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.features.registeruser.ui.RegisterLoginActivity" />
+        <activity android:name=".app.features.login.ui.LoginActivity">
+
+        </activity>
+        <activity android:name=".app.features.pullrequest.ui.view.PullRequestActivity" />
+        <activity android:name=".app.features.repository.ui.view.RepositoryActivity" />
     </application>
 
 </manifest>
